<resources>
    <string name="app_name">Mareu</string>
    <string name="content_delete_meeting_description">Effacer la réunion</string>
    <string name="Filtre_par_date">Par date</string>
    <string name="Filtre_par_nom">Par nom</string>
</resources>
