<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/items_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal">


...
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_text"
        android:layout_marginEnd="@dimen/margin_text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/delete_item"
        app:layout_constraintTop_toBottomOf="@id/item_salle" />

    <TextView
        android:id="@+id/item_heure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
